# python

./: Student_Driving_license.py  accii-encoder.py  accii.py  alien.py  city-displayer.py  enemies.py  extra.py  fibonacci-twocatsandadog.py  first.py  fleet.py  luckyfriend.py  sorter.py  word_generator.py
.github/workflows/: calculator_release.yaml
.ipynb_checkpoints/: selector-checkpoint.py
calculator/: .gitignore  Output.lnk  __main__.py  calculator-V1.0.3.py  calculator-V1.0.4.py  calculator-V1.0.4.spec  calculator-V1.0.5.py  calculator-V1.0.6.py  calculator-V1.0.6.spec  calculator-V1.0.7.py  calculator-V1.1.1.py  calculator-V1.1.2.py  calculator-V1.1.3.py  calculator-V1.1.4.py  compile.py  functions.py  innoscript.iss  license.txt  main.py  nuitka.toml  operations.py  pyproject.toml  setup.py
pygame-alien_invasion/: alien.py  bullet.py  enemies.py  main.py  settings.py  ship.py  stats.py
