[build-system]
requires = ["setuptools>=61.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MC1323-Calculator" 
version = "1.1.5"
authors = ["mastercoder1323"]
description = "A versatile calculator with various features."
license = "Apache 2 or license.txt" 

[dependencies]
python = "^3.9"
tk = "*"
pygame = "*" 
math = "*"
os = "*"